# auto_sniper_ml

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
src/scraper/: clean_invalid_cities.py  load_data.py  run.py
