[tool.poetry]
name = "auto-sniper-ml"
version = "0.1.0"
description = "An automated marketplace arbitrage pipeline using unsupervised entity resolution and LLM labeling."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Scraping Infrastructure
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.1.0"
# ML & Data Processing
scikit-learn = "^1.4.0"
sentence-transformers = "^2.3.0"
pandas = ">=2.2.0"
numpy = ">=2.1.0"
umap-learn = "^0.5.5" # For dimensionality reduction / visualization
# LLM & APIs
openai = "^1.12.0"
google-generativeai = "^0.3.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.0"
black = "^24.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"